Main nav spacing fixes

--- a/frontend/scss/components/_menus.scss
+++ b/frontend/scss/components/_menus.scss
@@ -2,7 +2,7 @@
   text-transform: uppercase;
   font-size: 15px;
   font-weight: 400;
-  padding: 20px 0 0;
+  margin: 15px 0 0;
 
   .menu {
     margin: 0;
@@ -62,7 +62,7 @@
 
   li {
     list-style: none;
-    padding: 0 0 11px;
+    padding: 0 0 24px;
     margin: 0 18px;
     float: left;
     position: relative;
@@ -76,7 +76,7 @@
       height: 0;
       left: 0;
       right: 0;
-      bottom: -16px;
+      bottom: 0;
       margin: 0;
       background: $brandColor;
       @include transition(height .2s ease-in-out);
